--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#BF1307</color>
+    <color name="colorPrimaryDark">#A81106</color>
+    <color name="colorAccent">#235789</color>
+    <color name="colorBrightAccent">#F1D302</color>
 </resources>
