--- a/app/src/main/res/layout/character_list_content.xml
+++ b/app/src/main/res/layout/character_list_content.xml
@@ -12,6 +12,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:padding="10dp"
+        android:textSize="26sp"
+        android:gravity="center"
         android:layout_weight="1" />
 
 </LinearLayout>
