--- a/app/src/main/res/layout/comics_list_content.xml
+++ b/app/src/main/res/layout/comics_list_content.xml
@@ -18,13 +18,29 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/comic_title_text"
-                android:textSize="22sp"
-                android:textAppearance="@color/colorAccent"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp"/>
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/comic_cover_image"
+                    android:layout_width="75dp"
+                    android:layout_height="100dp"
+                    android:layout_weight="1"
+                    android:padding="5dp"
+                    android:src="@drawable/default_image_thumbnail" />
+
+                <TextView
+                    android:id="@+id/comic_title_text"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:padding="10dp"
+                    android:textAppearance="@color/colorAccent"
+                    android:textSize="22sp" />
+
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/comic_desc_text"
@@ -33,7 +49,7 @@
                 android:layout_marginBottom="10dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:textSize="18sp"/>
+                android:textSize="18sp" />
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
